<resources>
    <string name="app_name">海门现金处理中心</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">用户登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">欢迎 ！</string>
    <string name="invalid_username">错误的用户名</string>
    <string name="invalid_password">请输入密码</string>
    <string name="login_failed">登录失败</string>


    <string name="cashSendApply">现金交款网点提交</string>
    <string name="cashBoxRecord">获取交取款明细</string>
    <string name="packRelated">箱包库配款关联和确认</string>
    <string name="cashBoxConfirm">现金申领网点确认</string>
    <string name="cashBoxConfirmSearch">款箱流转状态查询</string>

    <string name="cashboxin">箱包入库</string>
    <string name="cashboxopen">开箱卡把</string>
    <string name="cashboxprocess">中心配款</string>
    <string name="cashboxout">箱包出库</string>
    <string name="cashboxstatesearch">状态查询</string>

    <string name="cashboxmake">网点装箱</string>
    <string name="cashboxgeiup">网点上缴</string>
    <string name="cashboxreceive">网点接收</string>


    <string-array name="physicaltypes">
        <item>1-现金</item>
    </string-array>

</resources>