<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/line_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_cashboxmake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxmake"
                android:textSize="30sp"
                android:background="@color/outbus"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashboxgeiup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxgeiup"
                android:textSize="30sp"
                android:background="@color/outbus"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashboxreceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxreceive"
                android:background="@color/inbus"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/line_CashCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_cashboxin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxin"
                android:background="@color/inbus"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashboxopen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxopen"
                android:background="@color/inbus"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashboxprocess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxprocess"
                android:background="@color/outbus"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashboxout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cashboxout"
                android:background="@color/outbus"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cashboxstatesearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:text="@string/cashBoxConfirmSearch"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Button
            android:id="@+id/btn_cashSendApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cashSendApply"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cashBoxRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cashBoxRecord"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_packRelated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/packRelated"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_cashBoxConfirm1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="箱包库与押运确认"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cashBoxConfirm2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="网点与押运确认"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_cashBoxConfirmSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cashBoxConfirmSearch"
            android:textSize="30sp"
            android:textStyle="bold" /-->
    </LinearLayout>
</android.support.constraint.ConstraintLayout>